projects/snapshots/syntax/statements/declarations/arrays/redim_in_multiline_if.snap
---
source: projects/vb6parse/tests/statements/declarations/arrays.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: arraysNeedResize
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: ReDimStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: ReDimKeyword
                          text: ReDim
                        - kind: Whitespace
                          text: " "
                        - kind: PreserveKeyword
                          text: Preserve
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: myArray
                        - kind: LeftParenthesis
                          text: (
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: newSize
                        - kind: RightParenthesis
                          text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
